--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,7 @@ icon-ext = "1.6.6"
 circuit = "0.23.1"
 spotless = "6.25.0"
 androidxNavCompose = "2.8.0"
+androidxViewModelCompose = "2.8.5"
 kotlinxSerialization = "1.7.2"
 
 [libraries]
@@ -41,6 +42,7 @@ androidx-material-icons-ext = { group = "androidx.compose.material", name = "mat
 androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "androidxNavCompose" }
 kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlinxSerialization" }
 slack-circuit-foundation = { group = "com.slack.circuit", name = "circuit-foundation", version.ref = "circuit" }
+androidx-lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "androidxViewModelCompose"}
 
 
 [plugins]
